# tp_final_concurrente

./: .gitignore  LICENSE  README.md  compileAll.sh  pyproject.toml  runAll.sh
data/: MainVariacionDensidad_LOCK_OPTIMISTA.csv  MainVariacionHilosOperacionesPorHiloConstantes_GRANULARIDAD_FINA.csv  MainVariacionHilosOperacionesPorHiloConstantes_LOCK_OPTIMISTA.csv  MainVariacionHilosOperacionesTotalesConstantes_LOCK_FREE.csv  MainVariacionHilosOperacionesTotalesConstantes_LOCK_OPTIMISTA.csv
data/not_random/: MainVariacionDensidad_GRANULARIDAD_FINA.csv  MainVariacionDensidad_LOCK_FREE.csv  MainVariacionHilosOperacionesPorHiloConstantes_LOCK_FREE.csv  MainVariacionHilosOperacionesTotalesConstantes_GRANULARIDAD_FINA.csv
data/random/: MainVariacionDensidad_GRANULARIDAD_FINA.csv  MainVariacionDensidad_LOCK_FREE.csv  MainVariacionDensidad_LOCK_OPTIMISTA.csv  MainVariacionHilosOperacionesPorHiloConstantes_GRANULARIDAD_FINA.csv  MainVariacionHilosOperacionesPorHiloConstantes_LOCK_FREE.csv  MainVariacionHilosOperacionesPorHiloConstantes_LOCK_OPTIMISTA.csv  MainVariacionHilosOperacionesTotalesConstantes_GRANULARIDAD_FINA.csv  MainVariacionHilosOperacionesTotalesConstantes_LOCK_FREE.csv  MainVariacionHilosOperacionesTotalesConstantes_LOCK_OPTIMISTA.csv
listas/: Lista.java  ListaGranularidadFina.java  ListaLockFree.java  ListaLockOptimista.java  MainGranularidadFina.java  MainLockFree.java  MainLockOptimista.java  Node.java  NodeLockFree.java
main/: MainVariacionDensidad.java
python_scripts/: main.py.ipynb
threads/: AdderRunnable.java  RemoverRunnable.java
(+23 files in other folders)
