[tool.poetry]
name = "concurrente"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.8.2"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
Pillow = "^9.2.0"
pandas = "^2.0.1"
seaborn = "^0.11.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
